# XRayLuggageDetection

./: README.md  darknet  pyproject.toml
src/: cleanup.py  data_augmentation.py  process.py  trainset.py  xml2yolo.py
